Adicionando conteudo cabecalho/rodape

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-
+        <h1>Pablo Mendes Gal de Castro</h1>
     </header>
     <main>
 
     </main>
     <footer>
-        
+        <p>Pablo Mendes Gal de Castro <br> Email: pablo.gal@estudante.ufjf.br</p>
     </footer>
 </body>
 </html>
