Adicionando as 3 sections com o conteudo de cada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
         <h1>Pablo Mendes Gal de Castro</h1>
     </header>
     <main>
-
+        <section>
+            <h2>Local de nascimento e Hobbies</h2>
+            <p>Eu nasci em Juiz de Fora - MG. Tenho como hobbies jogos online, mais específicamente mmorpg's e jogos de estratégia em turnos,tocar violão,piano e também musculação para manter o corpo alinhado com a mente.</p> 
+        </section>
+        <section>
+            <h2>Motivos para escolher o curso</h2>
+            <p>Sempre gostei de criar coisas, fiz engenharia elétrica por um tempo, mas la encontrei minha paixão por programar, resolvi mudar para SI para me focar mais no que gosto, que é a programação e estar no computador como ambiente de trabalho.</p>
+        </section>
+        <section>
+            <h2>Com o que quero trabalhar</h2>
+            <p>No momento tenho em mente trabalhar como desenvolvedor frontend já faço um curso online disso, e estou aprendendo Javascript no momento o próximo passo será aprender React. <br> Mas também tenho muita curiosidade de aprender sobre banco de dados e gestão dos mesmos,acho incrível a ferramenta Power BI e acho que gostaria de trabalhar com isso. <br> Esse ano pretendo ver esse area para me informar melhor.</p>
+        </section>
     </main>
     <footer>
         <p>Pablo Mendes Gal de Castro <br> Email: pablo.gal@estudante.ufjf.br</p>
